# coding-challenges

./: .gitignore  README.md
.github/workflow/: aoc-2022.yml
.github/workflows/: ant.yml  aoc-2022.yml
AdventOfCode2020/: build.xml
AdventOfCode2020/Input/: Day13_Test2.txt
AdventOfCode2020/nbproject/: project.xml
AdventOfCode2021/: Day01_01_Soln.py  Day02_01_Soln.py
AdventOfCode2021/tests/: hello.py
Input/: Day12_Test2.txt
aoc-2021/: Day02_02_Soln.py  Day03_Soln.py
aoc-2021/solutions/: Day04_Soln.py
aoc/aoc-2018/: a.out  compile_flags.txt
aoc/aoc-2021/: Day01_02_Soln.py  README.md
aoc/aoc-2022/: README.md  temp.txt
aoc/aoc-2024/: .gitignore  CMakeLists.txt  compile-flags.txt
aoc/aoc-2024/sols/: CMakeLists.txt  day.hpp  day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  dayHelpers.cpp  dayHelpers.hpp  solution.cpp  solution.hpp
aoc/aoc-2024/src/: main.cpp
misc/bit-set-clear/: Makefile  notes.md
misc/list-even-odd/: notes.md
nbproject/: build-impl.xml  genfiles.properties
nbproject/private/: private.properties  private.xml
src/AdventOfCode2020_Day01/: ReportRepair1.java  ReportRepair2.java
src/AdventOfCode2020_Day02/: PasswordPhilosophy1.java  PasswordPhilosophy2.java
src/AdventOfCode2020_Day03/: TobogganTrajectory1.java  TobogganTrajectory2.java
src/AdventOfCode2020_Day04/: PassportProcessing1.java  PassportProcessing2.java
src/AdventOfCode2020_Day05/: BinaryBoarding1.java  BinaryBoarding2.java
src/AdventOfCode2020_Day06/: CustomCustoms1.java  CustomCustoms2.java
src/AdventOfCode2020_Day12/: RainRisk1.java
(+57 files in other folders)
